build: GHCR_PAT usage adjustments

--- a/.github/workflows/build-infrastructure.yml
+++ b/.github/workflows/build-infrastructure.yml
@@ -36,6 +36,8 @@ on:
         required: true
       JWT_SECRET:
         required: true
+      GHCR_PAT:
+        required: true
 
     inputs:
       environment:
