fix: use commit SHA for container image tag to avoid caching issues

--- a/.github/workflows/build-infrastructure.yml
+++ b/.github/workflows/build-infrastructure.yml
@@ -113,7 +113,7 @@ jobs:
             "jwtSecret": "${{ secrets.JWT_SECRET }}",
             "ghcrUsername": "${{ github.repository_owner }}",
             "ghcrToken": "${{ secrets.GHCR_PAT }}",
-            "containerImage": "ghcr.io/${{ github.repository_owner }}/windspire-backend:latest"
+            "containerImage": "ghcr.io/${{ github.repository_owner }}/windspire-backend:${{ github.sha }}"
           }
 
     - name: Configure post-deployment settings
