--- a/.github/workflows/build-frontend.yml
+++ b/.github/workflows/build-frontend.yml
@@ -71,7 +71,7 @@ jobs:
         run: npm run build
         env:
           NODE_ENV: production
-          VITE_API_BASE_URL: ${{ inputs.container-app-url }}
+          VITE_API_BASE_URL: ${{ inputs.container-app-url }}/api
           VITE_FIREBASE_API_KEY: ${{ secrets.FIREBASE_API_KEY }}
           VITE_FIREBASE_AUTH_DOMAIN: ${{ secrets.FIREBASE_AUTH_DOMAIN }}
           VITE_FIREBASE_PROJECT_ID: ${{ secrets.FIREBASE_PROJECT_ID }}
