--- a/windspire_backend/Dockerfile
+++ b/windspire_backend/Dockerfile
@@ -23,9 +23,8 @@ COPY migrations ./migrations
 # Copy SQLx query cache for offline mode
 COPY .sqlx ./.sqlx
 
-# Build with SQLx offline mode and static linking
+# Build with SQLx offline mode and full static linking
 ENV SQLX_OFFLINE=true
-ENV RUSTFLAGS="-C target-feature=-crt-static"
 
 RUN cargo build --release --target x86_64-unknown-linux-musl
 
@@ -35,11 +34,11 @@ FROM scratch
 # Copy CA certificates for HTTPS
 COPY --from=builder /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/
 
-# Copy the binary (Cargo converts underscores to hyphens in binary names)
-COPY --from=builder /app/target/x86_64-unknown-linux-musl/release/windspire-backend /windspire-backend
+# Copy the binary
+COPY --from=builder /app/target/x86_64-unknown-linux-musl/release/windspire_backend /windspire_backend
 
 # Expose port
 EXPOSE 8080
 
 # Run the binary
-ENTRYPOINT ["/windspire-backend"]
+ENTRYPOINT ["/windspire_backend"]
