--- a/windspire_frontend_svelte_csr/.env.development
+++ b/windspire_frontend_svelte_csr/.env.development
@@ -1,4 +1,10 @@
 # Local development environment variables
 VITE_API_BASE_URL=http://localhost:8080/api
-VITE_FIREBASE_CONFIG={"apiKey":"AIzaSyB-xoLIFv1XlLSLNFZ02_KLYqabsKfUdWU","authDomain":"windspire-by-hydrant.firebaseapp.com","projectId":"windspire-by-hydrant","storageBucket":"windspire-by-hydrant.appspot.com","messagingSenderId":"980038359773","appId":"1:980038359773:web:e8d0d3c245789ee337d934"}
 
+VITE_API_BASE_URL=/api
+VITE_FIREBASE_API_KEY=
+VITE_FIREBASE_AUTH_DOMAIN=
+VITE_FIREBASE_PROJECT_ID=
+VITE_FIREBASE_STORAGE_BUCKET=
+VITE_FIREBASE_MESSAGING_SENDER_ID=
+VITE_FIREBASE_APP_ID=
